--- a/apps/webapp/chess/src/index.html
+++ b/apps/webapp/chess/src/index.html
@@ -5,6 +5,7 @@
   <title>Chess</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
