Updated backed end to receive parameters in the body. Updated interceptor, updating config adds headers to the app.

--- a/apps/webapp/chess/src/index.html
+++ b/apps/webapp/chess/src/index.html
@@ -5,7 +5,10 @@
   <title>Chess</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; img-src https://* 'self' data:;">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="Access-Control-Allow-Origin" content="*">
+  <meta http-equiv="X-Frame-Options" content="DENY">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
