--- a/apps/webapp/chess/src/index.html
+++ b/apps/webapp/chess/src/index.html
@@ -5,6 +5,8 @@
   <title>Chess</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://*.cdnjs.cloudflare.com  https://*.www.w3schools.com 'unsafe-inline'; connect-src https://*.localhost:4200/ wss://*.localhost:4200/ws; img-src 'self'; frame-ancestors 'self'; form-action 'self'">
+  <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
